Revision history for Perl module define

1.03 2014-06-27 NEILB
    - Dropped min perl version from 5.8.4 to 5.6.0
    - Switched to Dist::Zilla
    - Reformatted this file as per CPAN::Changes::Spec

1.02 2004-09-04 GGUREVICH
    - documentation patch

1.01 2004-09-04 GGUREVICH
    - rewritten to behave more like constant.pm
    - removed problematic 'no define SYMBOL => VALUE' functionality

1.00 2002-04-30
    - unreleased draft

0.01 2002-04-03
    - original version; created by h2xs 1.23
